--- a/Unit_4/style.css
+++ b/Unit_4/style.css
@@ -1,23 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster);
+@import url(https://fonts.googleapis.com/css?family=Lato:400italic);
 	
 body{
   font-family: 'lobster',cursive;
   text-align: center;
-  background-image: cover
-    	linear-gradient(
-      		rgba(0, 15, 100, 0.5),
-      		rgba(0, 15, 100, 0.5)
+  background-image:linear-gradient(rgba(0, 15, 100, 0.5),rgba(0, 15, 100, 0.5)),
           url("http://www.livescience.com/images/i/000/031/960/original/tyrannosaurus-rex-color-121010a-02.jpg?1349895686");
   background-size: cover;
-   color: #0000;
+   color: #000000;
   font-family: Helvetica;
 }
 
 h2 {
   font-family:'lobster',cursive;
-	width: 200px;
+	width: 100%;
+  text-align:center;
 }
-@import url(https://fonts.googleapis.com/css?family=Cabin);
+
 p {
   font-family: 'Cabin', sans-serif;
   font-weight: 900;
@@ -32,8 +31,19 @@ p {
 	font-family: 'Roboto', sans-serif;
   font-weight: 600;
   color: white;
-	transform: translate(-50%, -50%);
-	position: absolute;
+  transform: translateY( -50%);
+  position: absolute;
   top: 50%;
-  left: 50%;
+    max-width: 600px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+#catchphrase{
+  font-family:'Lato',sans-serif;
+}
+
+#madeby{
+  font-family:'Lato',sans-serif;
 }
